--- a/src/Component/Hero/hero.css
+++ b/src/Component/Hero/hero.css
@@ -1,7 +1,7 @@
 .hero-main {
-    background-image: url(../../Assets/hero.jpg );
+    position: relative;
+    background-image: url(../../Assets/hero.jpg);
     width: 100%;
-    /* background-position: center; */
     background-size: cover;
     padding-block: 70px;
     height: 100vh;
@@ -11,6 +11,17 @@
     align-items: center;
 }
 
+/* Overlay effect */
+.hero-main::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
+    z-index: 1;
+}
 .hero-container {
     display: flex;
     flex-direction: row;
@@ -22,7 +33,11 @@
     margin-top: 90px;
     align-items: start;
     flex-direction: column;
+    position: relative;
+    z-index: 2;
+    color: var(--them-color)
 }
+
 .hero-content-heading {
     margin-bottom: 20px;
 }
@@ -31,7 +46,7 @@
     text-transform: uppercase;
     letter-spacing: 5px;
     font-weight: 600;
-    color: var(--them-secondary) !important;
+    color: var(--them-color) !important;
 }
 
 .hero-content-heading h1 {
