--- a/src/Component/Testimonial/testimonial.css
+++ b/src/Component/Testimonial/testimonial.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--text-color);
   /* border-radius: 10px; */
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(186,198,176, 0.1);
@@ -42,7 +42,7 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  border: 4px solid #fff;
+  border: 4px solid var(--text-color);
   outline: 3px solid  var(--them-color);
   object-fit: cover;
   transition: transform 0.3s ease;
@@ -55,7 +55,7 @@
 .ContentHolder {
   position: relative;
   padding: 15px;
-  background-color: #fff;
+  background-color: var(--text-color);
   border-top-right-radius: 20px;
   text-align: center;
 }
@@ -85,7 +85,7 @@
 }
 
 .swiper-pagination-bullet {
-  background-color: white;
+  background-color: var(--text-color);
   opacity: 1;
   border: 2px solid #4361ee;
   transition: background-color 0.3s ease, transform 0.3s ease;
@@ -101,7 +101,7 @@
 }
 
 .swiper-button {
-  border: 1px solid white;
+  border: 1px solid var(--text-color);
 }
 
 @media (max-width: 638px) {
