--- a/src/Component/footer/footer.css
+++ b/src/Component/footer/footer.css
@@ -3,11 +3,6 @@
   width: 115px;
 }
 
-/* .footer {
-  background: #e71313;
-}
- */
-
 .ant-typography {
   margin: 3px 0;
   letter-spacing: 1px;
@@ -30,7 +25,7 @@
 
 .footer-links a {
   text-decoration: none;
-  color: var(--second-bg-color);
+  color: var(--them-color);
   letter-spacing: 1px;
   padding: 0 16px;
   font-size: 16px;
@@ -46,7 +41,7 @@
 
 .footer-icons .icon {
   text-decoration: none;
-  color: var(--second-bg-color);
+  color: var(--them-color);
   padding: 0 16px;
   font-size: 30px;
 }
