--- a/src/Component/Category/category.css
+++ b/src/Component/Category/category.css
@@ -13,7 +13,7 @@
     width: auto;
     min-width: 180px;
     height: 300px !important;
-    background-color: #eeeff4;
+    background-color: var(--text-color);
     text-align: center;
     cursor: pointer;
     height: 370px;
