--- a/src/Component/FAQ/faq.css
+++ b/src/Component/FAQ/faq.css
@@ -47,6 +47,7 @@
     }
     .faq-main{
       position: relative;
+      background: var(--them-color); 
     }
     .star-page-faq {
       position: absolute;
