--- a/src/Component/sub-footer/sub.css
+++ b/src/Component/sub-footer/sub.css
@@ -1,6 +1,6 @@
 .sub-main{
     padding-block: 30px;
-    background-color: var(--second-bg-color);
+    background-color: beige;
     display: flex;
 }
 .sub-logo img{
@@ -14,7 +14,7 @@
 }
 .sub-content > .sub-link h4 {
     font-size: 17px;
-    color: var(--them-color);
+    color: var(--second-bg-color);
     font-weight: 600;
 }
 .sub-icons {
@@ -22,7 +22,7 @@
     gap: 20px;
 }
 .sub-icons > i > svg {
-    color: var(--them-color);
+    color: var(--second-bg-color);
     width: 25px;
     height: 25px;
     cursor: pointer;
