--- a/src/Component/getInTouch/GetInTouchMap.css
+++ b/src/Component/getInTouch/GetInTouchMap.css
@@ -17,15 +17,15 @@
 .map-section {
   width: 100%;
   /* border-radius: 8px; */
-  padding: 5px;
+  /* padding: 5px; */
   overflow: hidden;
-  box-shadow: 0 4px 12px rgba(186, 198, 176, 0.55);
+  /* box-shadow: 0 4px 12px rgba(186, 198, 176, 0.55); */
 }
 
 .info-cards {
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 20px;
   justify-content: center;
   align-items: center;
 }
@@ -38,7 +38,7 @@
   gap: 20px;
   background-color: var(--text-color);
   /* border-radius: 8px; */
-  box-shadow: 0 2px 8px rgba(186, 198, 176, 0.55);
+  /* box-shadow: 0 2px 8px rgba(186, 198, 176, 0.55); */
 }
 
 .info-card-content {
@@ -107,18 +107,18 @@
   background-color: var(--text-color);
   border: 1px solid #f0f0f0;
   border-radius: 4px;
-  box-shadow: 0 2px 4px 0 rgba(186, 198, 176, .06);
+  box-shadow: 0 2px 4px 0 rgba(186, 198, 176, 1);
   height: 57px;
-  padding: 0 25px;
+  /* padding: 0 25px; */
 }
 
 .text-section>textarea {
   color: #391965;
   display: flex;
-  padding: 25px;
+  padding: 25px 25px 25px 15px;
   border: 1px solid #f0f0f0;
   border-radius: 4px;
-  box-shadow: 0 2px 4px 0 rgba(186, 198, 176, .06);
+  box-shadow: 0 2px 4px 0 rgba(186, 198, 176, 1);
 }
 
 .contact-us-form-container {
@@ -155,4 +155,8 @@
     color: aliceblue;
     border: none;
   }
+}
+
+.contact-label{
+  margin: 10px 0;
 }
