--- a/src/Component/getInTouch/GetInTouchMap.css
+++ b/src/Component/getInTouch/GetInTouchMap.css
@@ -2,6 +2,11 @@
   background: var(--them-secondary);
 }
 
+.contact-us-form{
+  
+  background: var(--them-color);
+}
+
 .contact-us-form-heading{
   /* color: var(--them-color); */
 }
