--- a/src/Component/sub-footer/sub.css
+++ b/src/Component/sub-footer/sub.css
@@ -1,51 +1,61 @@
-.sub-main{
+.sub-main {
     padding-block: 30px;
     background-color: beige;
     display: flex;
 }
-.sub-logo img{
+
+.sub-logo img {
     width: 250px;
     height: auto;
 }
-.sub-content{
+
+.sub-content {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.sub-content > .sub-link h4 {
+
+.sub-content>.sub-link h4 {
     font-size: 17px;
     color: var(--second-bg-color);
     font-weight: 600;
 }
+
 .sub-icons {
     display: flex;
     gap: 20px;
 }
-.sub-icons > i > svg {
+
+.sub-icons>i>svg {
     color: var(--second-bg-color);
     width: 25px;
     height: 25px;
     cursor: pointer;
 }
-.sub-icons > i > svg:hover {
-    color: var(--them-color) ;
+
+.sub-icons>i>svg:hover {
+    color: var(--second-bg-color);
     transition: all 0.4s;
 }
-.sub-link > h4 > span{
-    border-bottom:  1px solid var(--them-color);
+
+.sub-link>h4>span {
+    border-bottom: 1px solid var(--them-color);
 }
-.sub-link > h4 > span:hover{
+
+.sub-link>h4>span:hover {
     color: var(--them-color);
     transition: all 0.4s;
 }
 
 
 @media (max-width: 767px) {
-    .sub-content{
+    .sub-content {
         flex-direction: column;
         text-align: center;
     }
-    .sub-content > .sub-link ,.sub-icons {
+
+    .sub-content>.sub-link,
+    .sub-icons {
         margin-top: 20px;
     }
 }
