--- a/src/Component/Services/services.css
+++ b/src/Component/Services/services.css
@@ -3,12 +3,12 @@
 }
 
 .services-heading{
-    color: var(--second-bg-color);
+    /* color: var(--text-color); */
 }
 
 .service-card {
     width: 100%;
-    background: linear-gradient(#39913a95, #0f0f0f75), url('./../../Assets/adult.jpg');
+    background: url('./../../Assets/adult.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -24,7 +24,7 @@
 }
 
 .child-counselling {
-    background: linear-gradient(#39913a95, #0f0f0f75), url('./../../Assets/child.jpg');
+    background: url('./../../Assets/child.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -79,7 +79,8 @@
 }
 
 .service-card-btn>button:hover {
-    background: #333 !important;
+    background: var(--them-color) !important;
+    color: var(--second-bg-color) !important;
     transform: scale(1.05);
 }
 
