--- a/src/Component/Hero/hero.css
+++ b/src/Component/Hero/hero.css
@@ -19,9 +19,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Adjust opacity as needed */
+    background: rgba(0, 0, 0, 0.5);
+    /* Adjust opacity as needed */
     z-index: 1;
 }
+
 .hero-container {
     display: flex;
     flex-direction: row;
@@ -41,6 +43,7 @@
 .hero-content-heading {
     margin-bottom: 20px;
 }
+
 .hero-content-heading h4 {
     font-size: 18px;
     text-transform: uppercase;
@@ -58,11 +61,12 @@
     color: var(--text-color);
 }
 
-.hero-content > p {
+.hero-content>p {
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 20px;
     color: var(--text-color);
-    
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+
 }
 
 .hero-img-container {
@@ -75,18 +79,19 @@
     width: 100%;
     object-fit: contain;
 }
-.hero-content-btn > button{
+
+.hero-content-btn>button {
     margin-top: 30px;
     padding: 15px 30px;
     font-weight: 600;
-    border:none;
+    border: none;
     color: var(--second-bg-color);
     background-color: beige;
     cursor: pointer;
 }
 
 @media (max-width: 768px) {
-    .hero-img-container > img {
+    .hero-img-container>img {
         width: 100%;
     }
 
@@ -98,23 +103,27 @@
     .hero-img-container>img {
         width: 100%;
     }
+
     .hero-content-heading h1 {
         font-size: 35px;
         font-weight: 800;
     }
+
     .hero-content-heading h4 {
         font-size: 14px;
     }
-    .hero-content > p {
+
+    .hero-content>p {
 
         margin-top: 10px !important;
         font-size: 14px;
     }
-    .hero-content-btn > button{
+
+    .hero-content-btn>button {
         padding: 10px 20px;
         font-weight: 600;
         font-size: 14px;
-        border:none;
+        border: none;
         color: aliceblue;
         background-color: var(--them-secondary);
         cursor: pointer;
@@ -126,13 +135,16 @@
         font-size: 35px;
         font-weight: 800;
     }
+
     .hero-content-heading h4 {
         font-size: 14px;
     }
-    .hero-content > p {
+
+    .hero-content>p {
         margin-top: 10px !important;
         font-size: 14px;
     }
+
     .hero-img-container>img {
         width: 100%;
     }
