--- a/src/Component/Testimonial/testimonial.css
+++ b/src/Component/Testimonial/testimonial.css
@@ -33,7 +33,7 @@
   display: flex;
   justify-content: center;
   padding: 20px;
-  border-bottom-left-radius: 20px;
+  /* border-radius: 20px; */
 }
 
 .ImgHolder img {
@@ -54,7 +54,7 @@
   position: relative;
   padding: 15px;
   background-color: var(--text-color);
-  border-top-right-radius: 20px;
+  /* border-radius: 20px; */
   text-align: center;
 }
 
